# research-paper-rag

./: .env  pyproject.toml
app/: api_check.py  main.py
app/services/: ingestion.py  rag_service.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  ChatMessage.tsx  ContextViewer.tsx  EmptyState.tsx  SourceCard.tsx
frontend/src/components/layout/: Container.tsx  Header.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Skeleton.tsx
frontend/src/hooks/: useAutoScroll.ts  useChat.ts
frontend/src/lib/: utils.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
